--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -134,7 +134,7 @@
                 <h3 class="mbr-section-title mb-4 mbr-fonts-style display-1">
                     <strong>Join our community on Telegram</strong></h3>
                 
-                <div class="mbr-section-btn"><a class="btn btn-white display-4" href="https://t.me/DEFlMILLION">Join channel&nbsp;</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-white display-4" href="https://t.me/Whales_Alert_oi">Join channel&nbsp;</a></div>
             </div>
         </div>
     </div>
