--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
                 <strong>Contact</strong>
             </h5>
             <ul class="list mbr-fonts-style display-4">
-                <li class="mbr-text item-wrap">mail@defimillion.io</li>
+                <li class="mbr-text item-wrap">mail@whalesalert.com</li>
                 <li class="mbr-text item-wrap">+44 7448 768864
                 </li>
                 <li class="mbr-text item-wrap"> 41 Eaton Square, London SW1W 9DH, United Kingdom.</li>
