--- a/views/services.ejs
+++ b/views/services.ejs
@@ -112,7 +112,7 @@
                         <h6 class="card-title mbr-fonts-style display-2"><strong>Regular Market Updates</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-4">Keeping track of the market on your own is never easy. There are many moving parts and thousands of coins to monitor. So besides reading graphs and candlestick charts, you need to pay attention to the news, the economy, and any other developments in the world of cryptocurrency.<br><br>You receive regular market updates through our daily reports, YouTube live streams, Telegram Private group, and Facebook group. So stay informed and receive expert picks to improve your odds of making a profit.</p>
                         <div class="mbr-section-btn mt-3">
-                            <a class="btn btn-warning display-4" href="https://t.me/DEFlMILLION">Join channel</a>
+                            <a class="btn btn-warning display-4" href="https://t.me/Whales_Alert_oi">Join channel</a>
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                         <h6 class="card-title mbr-fonts-style display-5"><strong>Crypto trading suggestions</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-4">We create crypto trading suggestions based on careful research using the steps discussed. You can count on our skilled traders to make the most accurate predictions.<br><br>As with predicting the weather, you cannot be right 100% of the time. However, our proven systems help increase the odds in your favor.</p>
                         <div class="mbr-section-btn mt-3">
-                            <a class="btn btn-primary display-4" href="https://t.me/DEFlMILLION">
+                            <a class="btn btn-primary display-4" href="https://t.me/Whales_Alert_oi">
                                 Join channel
                             </a>
                         </div>
