--- a/views/login.ejs
+++ b/views/login.ejs
@@ -169,7 +169,7 @@
                             </div> -->
                         </div>
                         <div class="form-footer text-center mt-5">
-                            <p class="text-muted"> <a href="mailto:mail@defimillion.io">Need access or help loging in?</a></p>
+                            <p class="text-muted"> <a href="mailto:mail@whalesalert.com">Need access or help loging in?</a></p>
                         </div>
                        
                     </div>
