--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -82,7 +82,7 @@
                 <p class="mbr-text mbr-white mbr-fonts-style display-7">
                     Check out our Free Crypto signals telegram group to have a little taste of our service. We provide bitcoin &amp; altcoins signals and analysis.
                 </p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="https://t.me/DEFlMILLION">Join telegram channel&nbsp;</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="https://t.me/Whales_Alert_oi">Join telegram channel&nbsp;</a></div>
             </div>
         </div>
     </div>
@@ -284,7 +284,7 @@
             <div class="col-12 col-lg-8">
                 <h3 class="mbr-section-title mb-4 mbr-fonts-style display-5"><strong>Check out our Free Crypto signals telegram group to have a little taste of our service. We provide bitcoin &amp; altcoins signals and analysis.</strong></h3>
                 
-                <div class="mbr-section-btn"><a class="btn btn-white display-4" href="https://t.me/DEFlMILLION">Join telegram group</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-white display-4" href="https://t.me/Whales_Alert_oi">Join telegram group</a></div>
             </div>
         </div>
     </div>
